2003-10-05  Paul Eggert  <eggert@twinsun.com>

	* README: Rework advice for preventing empty .o files.
	Don't recommend ELIDE constructs.  Recommend <stddef.h>,
	not <sys/types.h>.

2003-10-02  Bruno Haible  <bruno@clisp.org>

	* modules/lchown (Include): Add lchown.h.
	* modules/time_r (Include): Use "..." syntax.
	* modules/xgetdomainname (Include): Add xgetdomainname.h.

2003-10-01  Simon Josefsson  <jas@extundo.com>

	* MODULES.html.sh: Move gethostname from section 'based on' to section
	'lacking' POSIX:2001.

2003-09-27  Oskar Liljeblad  <oskar@osk.mine.nu>

	Trivial fixes to Makefile.am parts of module listings.
	* modules/strstr: Append strstr.h to lib_SOURCES.
	* modules/strcase: Likewise, for strcase.h.

2003-09-27  Paul Eggert  <eggert@twinsun.com>

	* modules/free: New file.

2003-09-25  Bruno Haible  <bruno@clisp.org>

	* modules/version-etc-2: New file, from modules/version-etc with
	modifications.
	* MODULES.html.sh (func_all_modules): Add version-etc-2.

2003-09-25  Simon Josefsson  <jas@extundo.com>
            Bruno Haible  <bruno@clisp.org>

	* modules/getdomainname: New file.
	* modules/xgetdomainname: New file.
	* MODULES.html.sh (func_all_modules): Add getdomainname, xgetdomainname.

2003-09-24  Paul Eggert  <eggert@twinsun.com>

	* README: Document assumptions that 'int' is at least 32 bits
	wide, that integer arithmetic is 2's complement without overflow,
	that there are no holes in integer values, that adding sizes of
	two nonoverlapping objects can't overflow, and that all-bits-zero
	yields scalar zero.  Fix spelling and capitalization typos.

2003-09-24  Simon Josefsson  <jas@extundo.com>

	* modules/xgethostname: Add xgethostname.h.

2003-09-17  Paul Eggert  <eggert@twinsun.com>

	* gnulib-tool: Use "test -h", not "test -L", for portability
	to Solaris 8 /bin/sh.  (This bug is fixed in Solaris 9.)
	(tags_regexp): Remove, since \| doesn't conform to POSIX.
	(sed_extract_prog): Issue s commands one-by-one, rather than