@@ -1,3 +1,8 @@
+2003-10-06  Bruno Haible  <bruno@clisp.org>
+
+	* fatal-signal.h: New file, from GNU gettext.
+	* fatal-signal.c: New file, from GNU gettext.
+
 2003-10-04  Karl Berry  <karl@gnu.org>
 
 	* argp*: update from libc.
