@@ -1,3 +1,8 @@
+2003-10-06  Bruno Haible  <bruno@clisp.org>
+
+	* fatal-signal.m4: New file.
+	* signalblocking.m4: New file, from GNU gettext.
+
 2003-09-27  Paul Eggert  <eggert@twinsun.com>
 
 	* free.m4: New file.
