@@ -1,3 +1,8 @@
+2003-10-06  Bruno Haible  <bruno@clisp.org>
+
+	* modules/fatal-signal: New file.
+	* MODULES.html.sh (func_all_modules): Add fatal-signal.
+
 2003-10-05  Paul Eggert  <eggert@twinsun.com>
 
 	* README: Rework advice for preventing empty .o files.
@@ -12,8 +17,8 @@
 
 2003-10-01  Simon Josefsson  <jas@extundo.com>
 
-	* MODULES.html.sh: Move gethostname from section 'based on' to section
-	'lacking' POSIX:2001.
+	* MODULES.html.sh (func_all_modules): Move gethostname from section
+	'based on' to section 'lacking' POSIX:2001.
 
 2003-09-27  Oskar Liljeblad  <oskar@osk.mine.nu>
 
